--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -166,8 +166,38 @@ img.img-fluid.w-25 {
     display: initial !important;
 }
 
+/* Owl Carousel Slider CSS */
 
-.owl-nav {
-    display: flex;
-    justify-content: space-between;
-}
+.main-content {
+    position: relative;
+    }
+    .main-content .owl-theme .custom-nav {
+      position: absolute;
+      top: 30%;
+      left: 0;
+      right: 0;
+    }
+    .main-content .owl-theme .custom-nav .owl-prev, .main-content .owl-theme .custom-nav .owl-next {
+      position: absolute;
+      height: 100px;
+      color: inherit;
+      background: none;
+      border: none;
+      z-index: 100;
+    }
+    .main-content .owl-theme .custom-nav .owl-prev i, .main-content .owl-theme .custom-nav .owl-next i {
+      font-size: 2.5rem;
+      color: #000000;
+    }
+    .main-content .owl-theme .custom-nav .owl-prev {
+      left: 0;
+    }
+    .main-content .owl-theme .custom-nav .owl-next {
+      right: 0;
+    }
+
+    .owl-theme .owl-nav [class*=owl-]:hover {
+        background: none !important;
+        color:none !important;
+        text-decoration: none !important;
+    }
